fix: Fix compilation errors in ListBackedCursor